--- a/usr/share/aat/Translations/DE.xml
+++ b/usr/share/aat/Translations/DE.xml
@@ -249,10 +249,14 @@
 	<msg mid="_PERIOD" value="Periode" />
   <msg mid="_PERIODS" value="Perioden" />
 	<msg mid="_PROCESSOR" value="Prozessor" />
+	<msg mid="_QUICK_SEARCH_ON_THIS_PAGE" value="_QUICK_SEARCH_ON_THIS_PAGE" />
 	<msg mid="_RACK" value="Rack" />
 	<msg mid="_RANK" value="Rang" />
 	<msg mid="_REGEXP_EXC" value="Regexp (Excl.)" />
   <msg mid="_REGEXP_INC" value="Regexp (Incl.)" />
+	<msg mid="_RELOAD" value="_RELOAD" />
+	<msg mid="_RELOAD_ALL" value="_RELOAD_ALL" />
+  <msg mid="_RELOAD_REQUIRED" value="_RELOAD_REQUIRED" />
 	<msg mid="_REMOVE_LOG_MINUTE" value="_REMOVE_LOG_MINUTE" />
 	<msg mid="_REPETITION_D" value="_REPETITION_N" />
 	<msg mid="_REPORT" value="Bericht" />
@@ -272,6 +276,7 @@
 	<msg mid="_RIGHTS" value="Rechte" />
 	<msg mid="_ROLE" value="_ROLE" />
 	<msg mid="_ROOM" value="Raum" />
+	<msg mid="_SAVE_AS_SEARCH_TEMPLATE" value="_SAVE_AS_SEARCH_TEMPLATE" />
 	<msg mid="_SCHEDULE" value="Planer" />
 	<msg mid="_SCHEDULE_REPORT" value="Berichte planen" />
 	<msg mid="_SCHEDULER" value="Planer" />	
